Fixed more with products page, also add new database dump

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -150,7 +150,7 @@
                                     <a href="#specifikation" title="Specifikationer"><img src="/img/ui/icons/list.svg" alt="Specifikationer"></a>
                                 </li>
                                 <li>
-                                    <a href="#tillbehor" title="Tillbehör"><img src="/img/ui/icons/list.svg" alt="Tillbehör"></a>
+                                    <a href="#tillbehor" title="Tillbehör"><img src="/img/ui/icons/additionals.svg" alt="Tillbehör"></a>
                                 </li>
                             </ul>
                             
