--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -19,6 +19,7 @@
                                       ->prependFile( $this->basePath( '/js/jquery.transit.min.js' ) )
                                       ->prependFile( $this->basePath( '/plugins/event.swipe/js/jquery.event.swipe.js' ) )
                                       ->prependFile( $this->basePath( '/plugins/event.move/js/jquery.event.move.js' ) )
+                                      ->prependFile( $this->basePath( '/plugins/modernizr/js/modernizr.2.7.0.js' ) )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js' )?>
         
@@ -219,7 +220,7 @@
             <div id="body_wrapper">
                 <div id="body">
 
-<?php echo $this->content; ?>
+                    <?php echo $this->content; ?>
 
                     <div class="clear"></div>
 
