--- a/public/css/products.css
+++ b/public/css/products.css
@@ -6,6 +6,183 @@
         Purpose of the stylesheet follows.
 */
 
+#body .container .price {
+    position: absolute;
+    display: block;
+    right: 12px;
+    top: 12px;
+    
+    float: right;
+}
+
+#body .container .buy {
+    display: block;
+    min-width: 100%;
+    
+    position: absolute;
+    display: block;
+    right: 0px;
+    bottom: 6px;
+    
+    float: right;
+}
+
+#body .container .buy label,
+#body .container .buy div:not(.clear),
+#body .container .buy select,
+#body .container .buy option,
+#body .container .buy input,
+#body .container .buy button {
+    position: relative;
+    
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 28px;
+    min-width: 24px;
+    
+    margin: 6px;
+    border: 2px solid rgb(153, 153, 153);
+    border-radius: 6px;
+    padding: 2px 12px;
+    
+    font-family: 'Fira Sans', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 12px;
+    
+    background-color: rgb(255, 255, 255);
+    
+    outline: none;
+}
+
+#body .container .buy * {
+    position: relative;
+    
+    float: right;
+}
+
+#body .container .buy select option:last-child {
+    border-radius: 0px 0px 6px 6px;
+}
+
+#body .container .buy label.antal {
+    text-transform: uppercase;
+    font-weight: bold;
+    
+    color: rgb(153,153,153);
+}
+
+#body .container .buy input {
+    width: 60px;
+    
+    border-style: solid;
+    
+    color: rgb(217, 125, 50);
+    font-weight: bold;
+    text-align: center;
+    
+    background-color: rgb(241, 241, 241);
+}
+
+#body .container .buy input.antal,
+#body .container .buy input.antal ~ label.antal {
+    transition: all 300ms ease-in-out;
+}
+
+#body .container .buy input.antal.valid,
+#body .container .buy input.antal.valid:focus {
+    border-style: solid;
+    border-color: rgb(129,178,70);
+    
+    color: #000;
+    
+    background-color: rgb(195,235,153);
+}
+
+#body .container .buy input.antal.valid ~ label.antal,
+#body .container .buy input.antal.valid:focus ~ label.antal {
+    color: rgb(129,178,70);
+    font-weight: bold;
+}
+
+#body .container .buy button {
+    transition: border-color 300ms ease-in-out,
+                background-color 300ms ease-in-out,
+                box-shadow 300ms ease-in-out,
+                color 300ms ease-in-out;
+    
+    display: block;
+    width: auto;
+    padding-right: 32px;
+    
+    cursor: pointer;
+    -webkit-filter: grayscale(1);
+    filter: grayscale(1);
+    
+    line-height: 20px;
+    
+    background-image: url('../img/ui/icons/buy_inactive.svg');
+    background-repeat: no-repeat;
+    background-position: 96% center;
+    background-size: 20px 20px;
+    
+    background-color: rgb(241, 241, 241);
+    border-color: rgb(129,178,70);
+    color: rgb(153,153,153);
+    font-weight: bold;
+}
+
+#body .container .buy button:not(.active):hover {
+    cursor: pointer;
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
+    
+    border-color: rgb(217,125,50);
+    background-color: rgb(239,176,129);
+    
+    color: rgb(217,125,50);
+}
+
+#body .container .buy button.active,
+#body .container .buy button.active:hover {
+    cursor: pointer;
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
+    
+    background-image: url('../img/ui/icons/buy.svg');
+    background-color: rgb(195,235,153);
+    
+    color: rgb(0,0,0);
+}
+
+#body .container .buy button:not(.active):hover {
+    box-shadow: rgb(217,125,50) 0px 0px 12px;
+}
+
+#body .container .buy button.active:hover {
+    box-shadow: #80DC09 0px 0px 12px;
+}
+
+#body .container .buy button img {
+    display: inline-block;
+    
+    position: relative;
+    float: right;
+    
+    max-width: 20px;
+    max-height: 20px;
+}
+
+#body .container .buy label {
+    height: 28px;
+    border: none;
+    background-color: transparent;
+    
+    margin: 6px 0px;
+    padding: 0px;
+    
+    font-size: 18px;
+    line-height: 28px;
+}
+
 #body .container .content .content_tabs {
     display: block;
     width: 100%;
@@ -152,6 +329,10 @@
     height: auto;
     position: relative;
     opacity: 0.0;
+}
+
+#body .container.product .content .content_data > div:not(:first-child) {
+    margin-top: 24px;
 }
 
 #body .container.product .content .content_data h4 {
