--- a/public/css/products.css
+++ b/public/css/products.css
@@ -24,6 +24,11 @@
 #body .container .buy {
     display: block;
     width: 100%;
+    min-height: 40px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    
+    margin-top: 48px;
     
     position: relative;
     
@@ -31,7 +36,7 @@
 }
 
 #body .container .buy label,
-#body .container .buy div:not(.clear):not(.add_to_cart),
+#body .container .buy div:not(.clear):not(.add_to_cart):not(.amount),
 #body .container .buy select,
 #body .container .buy option,
 #body .container .buy input,
@@ -45,7 +50,7 @@
     
     margin: 6px;
     border: 1px solid rgb(153, 153, 153);
-    border-radius: 6px;
+    border-radius: 0px 6px 0px 6px;
     padding: 2px 12px;
     
     font-family: 'Fira Sans', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -54,6 +59,14 @@
     background-color: rgb(255, 255, 255);
     
     outline: none;
+}
+
+#body .container .buy label {
+    cursor: pointer;
+    
+    position: absolute;
+    left: 6px;
+    top: -8px;
 }
 
 #body .container .buy * {
@@ -65,7 +78,8 @@
 #body .container .buy select {
     position: relative;
     
-    float: left;
+    float: right;
+    text-transform: capitalize;
 }
 
 #body .container .buy select option:last-child {
@@ -73,26 +87,48 @@
 }
 
 #body .container .buy label.antal {
-    text-transform: uppercase;
+    text-transform: lowercase;
+    font-variant: small-caps;
     font-weight: bold;
     
     color: rgb(153,153,153);
 }
 
-#body .container .buy input {
-    width: 60px;
+#body .container .buy input.antal {
+    box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    width: 26px;
+    height: 22px;
     
+    border-width: 1px;
     border-style: solid;
+    border-color: rgb(153,153,153);
+    
+    color: rgb(153,153,153);
     
     font-weight: bold;
     text-align: center;
     
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(252, 252, 252);
 }
 
 #body .container .buy input.antal,
 #body .container .buy input.antal ~ label.antal {
-    transition: all 300ms ease-in-out;
+    transition: border-color 300ms ease-in-out,
+                color 300ms ease-in-out,
+                width 300ms ease-in-out;
+}
+
+#body .container .buy input.antal.active {
+    padding: 1px 11px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #0290D0;
+    color: #0290D0;
+}
+
+#body .container .buy label.antal.active {
+    color: #0290D0;
 }
 
 #body .container .buy input.antal.valid,
@@ -115,11 +151,13 @@
     transition: border-color 300ms ease-in-out,
                 background-color 300ms ease-in-out,
                 box-shadow 300ms ease-in-out,
-                color 300ms ease-in-out;
+                color 300ms ease-in-out
     
-    display: block;
+    display: inline-block;
     width: auto;
     padding-right: 32px;
+    
+    position: relative;
     
     cursor: pointer;
     -webkit-filter: grayscale(1);
@@ -180,23 +218,33 @@
 }
 
 #body .container .buy label {
-    height: 28px;
+    display: inline-block;
+    /* width: 100%; */
+    height: 16px;
     border: none;
     background-color: transparent;
     
-    margin: 6px 0px;
+    margin: 0px;
     padding: 0px;
     
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 #body .container .buy .add_to_cart {
     display: block;
     
-    position: absolute;
+    position: relative;
     bottom: 0px;
     right: 0px;
+    
+    float: right;
+}
+
+#body .container .buy .add_to_cart > * {
+    display: inline-block;
+    
+    text-align: center;
 }
 
 #body .container .content .content_tabs {
