--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -2,7 +2,8 @@
     $this->inlineScript()->appendFile( $this->basePath('/plugins/ldscarousel/js/jquery.ldscarousel.js') )
                          ->appendFile( $this->basePath('/js/products.js') );
     
-    $this->headScript()->prependFile( $this->basePath('/plugins/autogrow/js/jquery.input.autogrow.js') )
+    $this->headScript()->prependFile( $this->basePath('/plugins/validate/js/jquery.validate.js') )
+                       ->prependFile( $this->basePath('/plugins/autogrow/js/jquery.input.autogrow.js') )
                        ->prependFile( $this->basePath('/plugins/fancybox/js/jquery.fancybox-thumbs.js') )
                        ->prependFile( $this->basePath('/plugins/fancybox/js/jquery.fancybox.js') );
     
@@ -41,37 +42,40 @@
                             
                             <div class="clear"></div>
                             
-                            <div class="buy">
+                            <form id="produkt-<?php echo( $value['product_id'] ); ?>-addtocart-form" class="buy">
                                 
-                                <div class="add_to_cart">
+                                <div class="add_to_cart buy_element">
                                     
                                     <button> Lägg i varukorgen </button>
                                     
                                     <div class="amount">
                                         <label for="produkt-<?php echo( $value['product_id'] ); ?>-antal" class="antal">Antal</label>
-                                        <input id="produkt-<?php echo( $value['product_id'] ); ?>-antal" type="text" placeholder="0" class="antal" required>
+                                        <input id="produkt-<?php echo( $value['product_id'] ); ?>-antal" type="text" placeholder="0" minlength="1" class="antal" required>
                                     </div>
                                     
                                 </div>
                                 
-                                <?php
-                                    if( array_key_exists('variants', $value ) ) {
-                                ?>
-                                <select id="product-<?php echo( $value['product_id'] ); ?>">
-                                    <option data-unselected="true" selected="selected"> -- <?php echo( $value['variant_title'] ); ?> -- </option>
-                                    <?php foreach( $value['variants'] as $v_key => $v_value ) { ?>
-                                    <option value="" data-id="<?php echo( $v_value['product_id'] ); ?>" data-name="<?php echo( $v_value['product_name'] ); ?>" data-icon="rollup_classic_large.png" data-manufacturer="<?php echo( $v_value['manufacturer'] ); ?>" data-price="<?php echo( $v_value['fran_price'] ); ?>" data-vat="25">
-                                        <?php echo( $v_value['product_variant'] ); ?> (från <?php echo( $v_value['fran_price'] ); ?>:-)
-                                    </option>
+                                <div class="buy_element">
+                                    <?php
+                                        if( array_key_exists('variants', $value ) ) {
+                                    ?>
+                                    <label for="product-<?php echo( $value['product_id'] ); ?>-variants" class="antal"><?php echo( $value['variant_title'] ); ?></label>
+                                    <select id="product-<?php echo( $value['product_id'] ); ?>-variants" title="Var god välj en <?php echo( $value['variant_title'] ); ?>" required>
+                                        <option value="default"></option>
+                                        <?php foreach( $value['variants'] as $v_key => $v_value ) { ?>
+                                        <option value="<?php echo( $v_value['product_id'] ); ?>" data-id="<?php echo( $v_value['product_id'] ); ?>" data-name="<?php echo( $v_value['product_name'] ); ?>" data-icon="rollup_classic_large.png" data-manufacturer="<?php echo( $v_value['manufacturer'] ); ?>" data-price="<?php echo( $v_value['fran_price'] ); ?>" data-vat="25">
+                                            <?php echo( $v_value['product_variant'] ); ?> (från <?php echo( $v_value['fran_price'] ); ?>:-)
+                                        </option>
+                                        <?php } ?>
+                                    </select>
+                                    <?php } else { ?>
+                                    <div id="product-<?php echo( $value['product_id'] ); ?>" class="hidden"></div>
                                     <?php } ?>
-                                </select>
-                                <?php } else { ?>
-                                <div id="product-<?php echo( $value['product_id'] ); ?>" class="hidden"></div>
-                                <?php } ?>
+                                </div>
                                 
                                 <div class="clear"></div>
                                 
-                            </div>
+                            </form>
                             <div class="clear"></div>
                         </div>
 
