--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -31,7 +31,7 @@
                         </li>
                     </ul>
                     
-                    <div class="splash container single backshadow product draggable">
+                    <div class="splash container single backshadow product">
 
                         <div class="header drag_handle">
                             
@@ -44,24 +44,13 @@
                             
                             <form id="produkt-<?php echo( $value['product_id'] ); ?>-addtocart-form" class="buy">
                                 
-                                <div class="add_to_cart buy_element">
-                                    
-                                    <button> Lägg i varukorgen </button>
-                                    
-                                    <div class="amount">
-                                        <label for="produkt-<?php echo( $value['product_id'] ); ?>-antal" class="antal">Antal</label>
-                                        <input id="produkt-<?php echo( $value['product_id'] ); ?>-antal" type="text" placeholder="0" minlength="1" class="antal" required>
-                                    </div>
-                                    
-                                </div>
-                                
                                 <div class="buy_element">
                                     <?php
                                         if( array_key_exists('variants', $value ) ) {
                                     ?>
                                     <label for="product-<?php echo( $value['product_id'] ); ?>-variants" class="antal"><?php echo( $value['variant_title'] ); ?></label>
-                                    <select id="product-<?php echo( $value['product_id'] ); ?>-variants" title="Var god välj en <?php echo( $value['variant_title'] ); ?>" required>
-                                        <option value="default"></option>
+                                    <select id="product-<?php echo( $value['product_id'] ); ?>-variants" title="Var god välj en <?php echo( $value['variant_title'] ); ?>" class="required" required>
+                                        <option value=""></option>
                                         <?php foreach( $value['variants'] as $v_key => $v_value ) { ?>
                                         <option value="<?php echo( $v_value['product_id'] ); ?>" data-id="<?php echo( $v_value['product_id'] ); ?>" data-name="<?php echo( $v_value['product_name'] ); ?>" data-icon="rollup_classic_large.png" data-manufacturer="<?php echo( $v_value['manufacturer'] ); ?>" data-price="<?php echo( $v_value['fran_price'] ); ?>" data-vat="25">
                                             <?php echo( $v_value['product_variant'] ); ?> (från <?php echo( $v_value['fran_price'] ); ?>:-)
@@ -71,6 +60,17 @@
                                     <?php } else { ?>
                                     <div id="product-<?php echo( $value['product_id'] ); ?>" class="hidden"></div>
                                     <?php } ?>
+                                </div>
+                                
+                                <div class="add_to_cart buy_element">
+                                    
+                                    <div class="amount">
+                                        <label for="produkt-<?php echo( $value['product_id'] ); ?>-antal" class="antal">Antal</label>
+                                        <input id="produkt-<?php echo( $value['product_id'] ); ?>-antal" type="text" placeholder="0" minlength="1" class="antal required" required>
+                                    </div>
+                                    
+                                    <button> Lägg i varukorgen </button>
+                                    
                                 </div>
                                 
                                 <div class="clear"></div>
